# library-trends

./: .gitignore  AGENTS.md  AGENTS_FUN.MD  AGENTS_FUN.md  AGENTS_PROD.md  Dockerfile  README.md  REPORT.MD  pyproject.toml
02092025/: ideas_scorecard.csv  research_log.md  trends_and_potential.md
02092025/research_results/: analysis_notes.md  falsification_attempts.md  notes.md  novel_ideas.md  registry.csv  trends_analysis.md
exports/run_3_02092025/: README.md  clusters.csv  registry.csv  report.md  research_log.md  scorecard.csv  topic_graph.json
src/scout/: __init__.py  cli.py  datastore.py  embeddings.py  github.py  reporting.py
tests/: test_datastore.py  test_embeddings.py  test_frontier.py  test_github.py  test_reporting.py  test_run_export.py  test_runs_persistence.py
